# UNIT-Factory

./: .gitignore  README.md
RTv1/: Makefile  RTv1.h  image.c  init_obj.c  init_params.c  light_reader.c  main.c  matrices.c  object_reader.c  other.c  ray.c  reader.c  render.c  render_help.c  rtv1.h  scene_reader.c  structs.h  trace.c  vector.c  vector_calcul.c
RTv1/libft/: ._Makefile  ._author  ._ft_atof.c  ._ft_atoi.c  ._ft_bzero.c  ._ft_isalnum.c  ._ft_isalpha.c  ._ft_isascii.c  ._ft_isdigit.c  ._ft_isprint.c  ._ft_isspace.c  ._ft_itoa.c  (+63 more)
fillit/: Makefile  check.c  coordinates.c  create.c  free.c  ft_memset.c  ft_putendl.c  ft_strdel.c  ft_strdup.c  ft_strlen.c  ft_strsub.c  head.h  main.c  solve.c  square.c
fractol/: ._controls.xpm  Makefile  cantor_set.c  color.c  controls.xpm  draw.c  fractals.c  fractol  fractol.h  julia_set.xpm  key_hooks.c  main.c  mouse_hooks.c  threads.c
ft_printf/: ._test_printf.c  CMakeLists.txt  Makefile  chars.c  conversion.c  decimals.c  flagged_base.c  flagged_decimals.c  flagged_unsigned.c  ft_itoa_base.c  ft_nblen.c  ft_printf.c  ft_printf.h  ft_strsplit.c  get_next_line.c  hex.c  libft.h  octal.c  other.c  output.c  pointer.c  printf_lib.c  printf_main.c  test_printf.c  unsigned.c  wchars.c  wide_chars.c  widechr.c
ft_printf/libft/: Makefile  ft_atof.c  ft_isalpha.c  ft_itoa_base.c  ft_nblen.c  ft_strstr.c  libft.h
get_next_line/: get_next_line.c  get_next_line.h
libft/: Makefile
wolf3d/: Makefile  env.c  error.c  events.c  image.c  keycodes.c  level2.c  main.c  map.c  map_visualizer.c  raycast.c  start_page.c  wolf3d.h
(+124 files in other folders)
